# aligned_alloc

./: CMakeLists.txt  README.md  aligned_alloc.c  aligned_alloc.h  main.c
